source/_styles/navigation.styl
active-nav(color)
    &.active
        border-bottom 4px solid color

        a
            color #7B7B7B

    a
        &:hover
            color color

            svg
                g
                    g
                        fill color


nav
    box-shadow 0px 0px 20px 0px rgba(0, 0, 0, 0.2)

    li
        a
            color #252525
            font-weight 100

            &:focus
                outline  none

        active-nav(#0680FC)

        &.product
            active-nav(#FFC600)

        &.vision
            active-nav(#42C8C6)

        &.research
            active-nav(#F5762D)

    .btn-link
        color #0680FC

#select-language
    .modal-content
        background-color #F1F1F1

        .modal-header
            border none

            h5
                font-size 16px
                font-weight bold

        .modal-body
            font-size 14px
            line-height 20px

.navbar-toggler
    font-size 14px
    font-weight bold

    &:after
        content '▲'
        padding-left 0.6em
        font-size 12px
        // line-height 14px

    &.collapsed
        &:after
            content '▼'
            padding-left 0.6em
            font-size 12px
            // line-height 14px


@media only screen and (max-width: 319px)
    .navbar-brand
        img
            margin-top 2px
            margin-bottom 2px
            width 180px
            height 33px

